--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/app-auth
 spring.datasource.username=postgres
 spring.datasource.password=20111999
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
